# hooksmith

./: .editorconfig  .envrc  .gitattributes  .gitattributes-safechars  .gitignore  .gitmodules  .gwtr.toml  .pre-commit-config.yaml  .workbloom  .worktree-config.json  .worktree-config.jsonc  .wtp.yml  ARCHITECTURE.md  AUTOPUSH_WORKFLOW.md  BINARY_CLEANUP_SUMMARY.md  BOOTSTRAP.md  BOOTSTRAP_REFACTOR.md  BOOTSTRAP_SUMMARY.md  BRANCH_MERGE_SUMMARY.md  BUILD_OPTIMIZATION_SUMMARY.md  CARGO_BEST_PRACTICES.md  CHANGELOG.md  CI_CD_INTEGRATION_SUMMARY.md  CI_CD_INTEGRATION_VERIFICATION.md  CI_INTEGRATION_REPORT.md  CLEANED_FILE_POLICY_SUMMARY.md  CLIPPY_FIXES_SUMMARY.md  CODEGEN_MARKERS.md  CODEGEN_SUMMARY.md  CODEOWNERS  CODE_STATS_SYSTEM_SUMMARY.md  COMPREHENSIVE_DOCS_SUMMARY.md  CONTRACT_WORKFLOW_DESIGN.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.status  DIRENV_INTEGRATION_SUMMARY.md  DIRENV_SETUP.md  Dockerfile  ENHANCED_BOOTSTRAP_TESTING_SUMMARY.md  (+120 more)
components/cli-core/: Cargo.toml
components/cli-core/src/: lib.rs
components/git-filter/: Cargo.toml  README.md
components/git-filter/src/: actions.rs  blob_contract.rs  contract.rs  error.rs  filename_contract.rs  filter.rs  git_object_contract.rs  lib.rs  line_contract.rs  main.rs  ref_contracts.rs  state.rs  tree_contract.rs  tree_contract.rs.backup  tree_filename_chars_contract.rs  unified_contracts.rs
components/git-validator/: Cargo.toml
components/git-validator/src/: lib.rs
components/hook-builder/: Cargo.toml
components/hook-builder/src/: builder.rs  compiler.rs  lib.rs  optimizer.rs  validator.rs
components/hook-builder/wit/: hook-builder.wit
components/worktree-manager/: Cargo.toml
components/worktree-manager/src/: lib.rs
components/worktree-runner/: .wtp.yml  Cargo.toml
components/worktree-runner/src/: lib.rs
components/worktree-runner/wit/: worktree-runner.wit
crates/components/contract-validator/: Cargo.toml
crates/components/contract-validator/src/: lib.rs
crates/components/contract-validator/wit/: contract-validator.wit
crates/components/git-proxy/: Cargo.toml  README.md
crates/components/git-proxy/examples/: config.toml  demo.rs
crates/components/git-proxy/src/: config.rs  hooks.rs  lib.rs  protocol.rs  server.rs  sync.rs  validation.rs
crates/components/hook-engine/: Cargo.toml
crates/components/hook-engine/src/: lib.rs
crates/event-types/: Cargo.toml
crates/event-types/src/: lib.rs  schema.rs
crates/file-operations/: Cargo.toml
crates/file-operations/src/: event_handler.rs  lib.rs  operations.rs  schema.rs
crates/file-system-handler/: Cargo.toml
crates/file-system-handler/src/: lib.rs
crates/gba/: Cargo.toml
crates/gba/src/: main.rs
crates/git-operations/: Cargo.toml
crates/git-operations/src/: event_handler.rs  lib.rs  operations.rs  schema.rs
crates/hooks/: Cargo.toml  hook-test-results.json
crates/hooks/src/: lib.rs  main.rs  schema.rs  test_framework.rs
crates/hooksmith-app/: Cargo.toml  lib.rs  main.rs
crates/hooksmith-app/modules/: agreement_manager.rs  contract_state_machine.rs  git_bindings.rs  git_native.rs  tree_split_planner.rs
crates/hooksmith-app/orchestrator/: event_bus.rs
crates/hooksmith-validate/: Cargo.toml
crates/hooksmith-validate/src/: lib.rs
crates/inspector/: Cargo.toml
crates/inspector/src/: lib.rs  main.rs
crates/snapshot/: Cargo.toml
crates/snapshot/src/: lib.rs  main.rs
crates/standalone-auditor/: Cargo.toml
crates/standalone-auditor/src/: lib.rs  main.rs
crates/tools/: Cargo.toml  tree_cleanup.rs
crates/tools/migrate-to-monorepo/: Cargo.toml  README.md
crates/tools/migrate-to-monorepo/src/: main.rs
crates/tools/src/: lib.rs
lefthook-rs/: Cargo.toml
lefthook-rs/src/: binary.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs
scripts/: .gitignore  Cargo.toml  README.md  README_BLOB_ANALYSIS.md  add-checksums-corrected.sh  add-checksums-to-files.sh  add-checksums.rs  add-registry-checksums.rs  advanced-git-aliases.sh  agreement_validator.rs  analyze-file-distribution.sh  analyze_blob_sizes.rs  auto-merge-all-prs.sh  auto_merge_all_prs.rs  blob_deduplication_analyzer.rs  build-stats.sh  build_xtask.rs  build_xtask.sh  build_xtask_cross.rs  build_xtask_cross.sh  check-errors.sh  check-root-policy.rs  ci-build.sh  ci-gitattributes.sh  cleanup-logs.sh  cleanup-old-worktrees.sh  cleanup-registry.sh  cleanup_old_worktrees.rs  compare-generated-files.sh  comprehensive-worktree-workflow.sh  comprehensive_worktree_workflow.rs  configure-git-proxy.rs  contract_stability_analyzer.rs  contract_validation_pipeline.rs  convert-shell-to-rust.sh  crate_granularity_analyzer.rs  crate_stability_analyzer.rs  create_worktree_pr.rs  debug-pre-push.sh  demo-workflow.sh  (+120 more)
scripts/ensure-clean-main/: Cargo.toml
scripts/ensure-clean-main/src/: main.rs
scripts/jql_queries/: error_report.jql  event_summary.jql  performance_report.jql  warning_report.jql
xtask/: Cargo.toml  README.md  status-badge.json  status-badge.jsonc
xtask/docs/: CLI_HELP.md
xtask/examples/: tui_dashboard_demo.rs
xtask/hooks/: .gitattributes  .gitattributes-blob-contract  .gitattributes-safechars  README.md
xtask/src/: auto_push.rs  checksum.rs  checksum_registry.rs  code_stats.rs  contract.rs  contract_commands.rs  contract_state_machine.rs  dashboard.rs  emit.rs  error_deduplication.rs  event_bus.rs  event_stream.rs  events.rs  file_audit.rs  generated_file_validator.rs  git_lefthook_integration.rs  git_notes_manager.rs  hierarchical_validation.rs  hook_runner.rs  hook_state_machine.rs  jsonc.rs  main.rs  registry.rs  sarif_integration.rs  status.rs  strict_file_validator.rs  structured_auto_push.rs  structured_logging.rs  unified_generator.rs  wasm_event_bus.rs  workflow.rs
xtask/src/config/: contract_state.rs  docs_manifest.rs  lefthook.rs  mod.rs
xtask/src/dashboard/: mod.rs  state.rs  ui.rs
xtask/src/docs/: checksum.rs  cli_help.rs  component_docs.rs  examples.rs  manifest.rs  mod.rs  source_extraction.rs  structure.rs  templates.rs
xtask/status-trends/: status-2025-08-02.json
xtask/wit/: hooksmith.wit  worktree-runner.wit
(+1003 files in other folders)
