[package]
name = "hooksmith"
version = "0.1.0"
edition = "2021"
authors = ["Pushd Team"]
description = "CLI tools for Git worktree management and safety"
license = "MIT"

[features]

[workspace]
members = [
    ".",
    "crates/components/cli-core",
    "crates/components/worktree-runner",
    "crates/components/git-proxy",
    "crates/xtask",
    # "scripts/ensure-clean-main",  # Temporarily disabled for Docker build
                    "crates/tree",
                "crates/files",
                "crates/core",
                "crates/snapshot",
                "crates/inspector",
                "crates/hooks",
]

[profile.dev]
opt-level = 1
debug = false
incremental = true

[profile.release]
opt-level = "z"
strip = "debuginfo"
lto = true
codegen-units = 1
panic = "abort"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Pushd Team"]
license = "MIT"

[workspace.dependencies]
# CLI framework
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
console = "0.15"
indicatif = "0.17"

# File system and paths
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Git operations
git2 = "0.18"

# Process and command execution
which = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Documentation
rustdoc-stripper = "0.1"

# WASM and WIT support
wasmtime = "18.0"
wit-bindgen = "0.20"
wasmtime-wasi = "18.0"
wit-parser = "0.12"
wit-component = "0.236"
wat = "1.0"
wasmparser = "0.120"
once_cell = "1.19"

# Time and date handling
chrono = { version = "0.4", features = ["serde"] }

# JSON Schema validation
jsonschema = "0.17"
schemars = "0.8"
reqwest = { version = "0.11", features = ["json", "blocking"] }

# JSONC parsing
jsonc-parser = "0.2"

# Cryptographic hashing
sha2 = "0.10"
hex = "0.4"

# Error handling
thiserror = "1.0"

# File system utilities
tempfile = "3.0"

# Async runtime
regex = "1.0"
futures-io = "0.3"
num_cpus = "1.0"

# Additional dependencies
uuid = { version = "1.0", features = ["v4"] }
hyperpolyglot = "0.1.0"
itertools = "0.12"

[[bin]]
name = "hooksmith"
path = "src/main.rs"

[[bin]]
name = "dircheck-tree"
path = "src/bin/dircheck-tree.rs"

[[bin]]
name = "dircheck-files"
path = "src/bin/dircheck-files.rs"

[[bin]]
name = "dircheck"
path = "src/bin/dircheck.rs"

[[bin]]
name = "hooksmith-validate-tree"
path = "src/bin/hooksmith-validate-tree.rs"

[[bin]]
name = "hooksmith-validate-push"
path = "src/bin/hooksmith-validate-push.rs"

[[bin]]
name = "integrated_git_analyzer"
path = "scripts/integrated_git_analyzer.rs"

[[bin]]
name = "modular_analyzer"
path = "scripts/modular_analyzer.rs"

[[bin]]
name = "git_lfs_analyzer"
path = "scripts/git_lfs_analyzer.rs"

[[bin]]
name = "lfs_hook_optimizer"
path = "scripts/lfs_hook_optimizer.rs"

[lib]
name = "hooksmith"
path = "src/lib.rs"

[dependencies]
# CLI dependencies
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
console.workspace = true
indicatif.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
git2.workspace = true
which.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Time and date handling
chrono.workspace = true

# JSON Schema validation
jsonschema.workspace = true
schemars.workspace = true

# JSONC parsing
jsonc-parser.workspace = true

# Cryptographic hashing
sha2.workspace = true

# Error handling
thiserror.workspace = true

# Async runtime
regex.workspace = true
num_cpus.workspace = true

# Additional dependencies
uuid.workspace = true
hyperpolyglot.workspace = true
itertools.workspace = true
serde_yaml.workspace = true
reqwest.workspace = true

# WASM and WIT support
wasmtime.workspace = true

# Internal component dependencies
cli-core = { path = "crates/components/cli-core" }
event-types = { path = "crates/event-types" }
json-patch = "4.0.0"
sonic-rs = "0.5.3"
json_fast = "0.1.0"
jzon = "0.12.5"
ajson = "0.3.1"
serde-sarif = "0.8.0"

[dev-dependencies]
tempfile = "3.0"

[build-dependencies]
serde_json = "1.0"
