# Workspace configuration only - no package configuration

[workspace]
resolver = "2"
members = [
    "crates/gba",
    "crates/hooksmith-app",
    "crates/components/cli-core",
    "crates/components/worktree-runner",
    "crates/components/contract-validator",
    "crates/components/hook-engine",
    # crates/components/git-proxy — QUARANTINED: 19 compile errors (git2 Send/Sync, async-trait mismatches). WIP.
    "crates/xtask",
    "crates/git-agreement",
    "crates/tree",
    "crates/files",
    "crates/core",
    "crates/snapshot",
    "crates/inspector",
    "crates/hooks",
    "crates/standalone-auditor",
    "crates/hooksmith-validate",
    "crates/tools/migrate-to-monorepo",
    "crates/tools",
    "crates/scripts",
]
default-members = ["crates/gba"]

[profile.dev]
opt-level = 1
debug = false
incremental = true

[profile.release]
opt-level = "z"
strip = "debuginfo"
lto = true
codegen-units = 1
panic = "abort"
# Deterministic build settings
rpath = false
incremental = false

[profile.release-with-debug]
inherits = "release"
strip = "none"
debug = true

# Target directory is configured in .cargo/config.toml

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Pushd Team"]
license = "MIT"

# Workspace-wide lints: fail on warnings in our code, but not dependencies
[workspace.lints.rust]
warnings = "deny"         # fail on warnings in workspace members
unused = "deny"           # deny unused imports, variables, etc.
rust_2018_idioms = "deny" # enforce modern Rust idioms

[workspace.lints.clippy]
all = "deny"              # deny all clippy lints for strict CI

[workspace.dependencies]
# CLI framework
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
console = "0.15"
indicatif = "0.17"

# File system and paths
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Git operations
git2 = "0.18"

# Process and command execution
which = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Documentation
rustdoc-stripper = "0.1"

# WASM and WIT support
wasmtime = "18.0"
wit-bindgen = "0.20"
wasmtime-wasi = "18.0"
wit-parser = "0.12"
wit-component = "0.236"
wat = "1.0"
wasmparser = "0.120"
once_cell = "1.19"

# Time and date handling
chrono = { version = "0.4", features = ["serde"] }

# JSON Schema validation
jsonschema = "0.17"
schemars = "0.8"
reqwest = { version = "0.11", features = ["json", "blocking"] }

# JSONC parsing
jsonc-parser = "0.2"

# Cryptographic hashing
sha2 = "0.10"
hex = "0.4"

# Error handling
thiserror = "1.0"

# File system utilities
tempfile = "3.0"

# Async runtime
regex = "1.0"
futures-io = "0.3"
num_cpus = "1.0"

# Additional dependencies
uuid = { version = "1.0", features = ["v4"] }
hyperpolyglot = "0.1.0"
itertools = "0.12"
