[package]
name = "lefthook-rs"
version = "0.1.0"
edition = "2021"
description = "Rust wrapper for Lefthook Git hooks manager"
license = "MIT"
repository = "https://github.com/your-username/hooksmith"
keywords = ["git", "hooks", "lefthook", "ci", "automation"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"], optional = true }
which = "6.0"
reqwest = { version = "0.11", features = ["json"], optional = true }
tempfile = "3.8"
indicatif = "0.17"
console = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"
assert_fs = "1.1"
predicates = "3.0"

[features]
default = ["cli"]
cli = ["clap"]
download = ["reqwest"]
