[workspace]

[package]
name = "validate-object-names-contract"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
globset = "0.4"
serde_json = "1.0"
sha2 = "0.10"
git2 = "0.18"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "validate_object_names_contract"
path = "validate_object_names_contract.rs"

[[bin]]
name = "analyze_object_names_migration"
path = "analyze_object_names_migration.rs"

[[bin]]
name = "switch_object_names_contract"
path = "switch_object_names_contract.rs"

[[bin]]
name = "contract_validation_pipeline"
path = "contract_validation_pipeline.rs"

[[bin]]
name = "git_object_walker"
path = "git_object_walker.rs"

[[bin]]
name = "enhanced_contract_pipeline"
path = "enhanced_contract_pipeline.rs"

[[bin]]
name = "scope_ref_manager"
path = "scope_ref_manager.rs"

[[bin]]
name = "scope_aware_contract_pipeline"
path = "scope_aware_contract_pipeline.rs"

[[bin]]
name = "test_minimal_root_contract"
path = "test_minimal_root_contract.rs"

[[bin]]
name = "migrate_to_minimal_root"
path = "migrate_to_minimal_root.rs"

[[bin]]
name = "validate_contract_agreement"
path = "validate_contract_agreement.rs"

[[bin]]
name = "four_actor_pipeline"
path = "four_actor_pipeline.rs"
