[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
lefthook-rs = { path = "../lefthook-rs" }
tokio = { version = "1.0", features = ["full"] }
hooksmith = { path = ".." }
git2 = "0.18"
chrono = { version = "0.4", features = ["serde"] }
sha256 = "1.1"
serde_json = "1.0"
