[package]
name = "git-filter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Git operations and attributes
gix-filter = "0.8"
gix-attributes = "0.20"
gix-object = "0.40"
gix-worktree = "0.25"

# Standard library extensions
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# I/O and utilities
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1" 
