[package]
name = "git-filter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
git2.workspace = true
gix-filter.workspace = true
tracing.workspace = true
jsonschema.workspace = true
sha2.workspace = true
chrono.workspace = true
thiserror.workspace = true
once_cell.workspace = true
regex.workspace = true
futures-io.workspace = true
