[package]
name = "git-validator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Git validation tools"

[lib]
name = "git_validator"

[dependencies]
# Core dependencies
anyhow.workspace = true
git2.workspace = true
serde.workspace = true
serde_json.workspace = true 
