[package]
name = "hook-builder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }

# Build tools
which = "6.0"
tempfile = "3.0"

# File system operations
walkdir = "2.4"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# JSON processing
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"

[dev-dependencies]
tempfile = "3.0" 
