[package]
name = "hook-builder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
wasmtime.workspace = true
wit-bindgen.workspace = true
wit-parser.workspace = true
wit-component.workspace = true
wat.workspace = true
wasmparser.workspace = true
tracing.workspace = true
