[package]
name = "worktree-manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Git worktree management"

[lib]
name = "worktree_manager"

[dependencies]
# Core dependencies
anyhow.workspace = true
git2.workspace = true
serde.workspace = true
serde_json.workspace = true 
