[package]
name = "worktree-runner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
git2.workspace = true
which.workspace = true
tracing.workspace = true
