[package]
name = "event-types"
version = "0.1.0"
edition = "2021"
description = "Shared event types for Hooksmith's hybrid WIT + native Rust architecture"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hooksmith/hooksmith"
keywords = ["events", "wasm", "wit", "orchestration"]
categories = ["wasm", "api-bindings"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] } 
