[package]
name = "git-operations"
version = "0.1.0"
edition = "2021"
description = "Native Git operations handler for Hooksmith hybrid architecture"
license = "MIT OR Apache-2.0"
authors = ["Hooksmith Contributors"]
repository = "https://github.com/hooksmith/hooksmith"
keywords = ["git", "operations", "system", "repository"]
categories = ["development-tools", "system-programming"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
git2 = "0.18"
pathdiff = "0.2"
warp = "0.3"
schemars = { version = "0.8", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4" 
