[package]
name = "git-hooks"
version = "0.1.0"
edition = "2021"
authors = ["Pushd Team"]
description = "Rust-based Git hooks for Hooksmith"
license = "MIT"

[dependencies]
dircheck-core = { path = "../core" }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }

[[bin]]
name = "pre-commit"
path = "src/bin/pre-commit.rs"

[[bin]]
name = "pre-push"
path = "src/bin/pre-push.rs"
