[package]
name = "hooksmith"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "CLI tools for Git worktree management and safety"
license.workspace = true
build = "build.rs"

# Inherit workspace lints (fail on warnings)
[lints]
workspace = true

[features]

[dependencies]
# CLI framework
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
console.workspace = true
indicatif.workspace = true

# File system and paths
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true

# Git operations
git2.workspace = true

# Process and command execution
which.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Documentation
rustdoc-stripper.workspace = true

# Internal workspace dependencies
hooksmith-core = { path = "../core" }
git-hooks = { path = "../hooks" }
xtask = { path = "../xtask" }
git-agreement = { path = "../git-agreement" }
dircheck-tree = { path = "../tree" }
dircheck-files = { path = "../files" }
git-snapshot = { path = "../snapshot" }
git-inspector = { path = "../inspector" }
object-names-auditor = { path = "../standalone-auditor" }
hooksmith-validate = { path = "../hooksmith-validate" }
hooksmith-tools = { path = "../tools" }

[lib]
path = "lib.rs"

[[bin]]
name = "hooksmith"
path = "main.rs"

[[bin]]
name = "dircheck-tree"
path = "bin/dircheck-tree.rs"

[[bin]]
name = "dircheck-files"
path = "bin/dircheck-files.rs"

[[bin]]
name = "dircheck"
path = "bin/dircheck.rs"

[[bin]]
name = "hooksmith-validate-tree"
path = "bin/hooksmith-validate-tree.rs"

[[bin]]
name = "hooksmith-validate-push"
path = "bin/hooksmith-validate-push.rs"
