[package]
name = "hooksmith-validate"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
git2 = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
regex = "1.10"
walkdir = "2.5"

[[bin]]
name = "hooksmith-validate"
path = "src/bin/hooksmith-validate.rs"
