[package]
name = "git-inspector"
version = "0.1.0"
edition = "2021"
authors = ["Pushd Team"]
description = "Comprehensive Git repository inspection and analysis tool"
license = "MIT"

[dependencies]
dircheck-core = { path = "../core" }
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
