[package]
name = "git-snapshot"
version = "0.1.0"
edition = "2021"
authors = ["Pushd Team"]
description = "Create comprehensive line-based snapshots of Git repository state"
license = "MIT"

[dependencies]
hooksmith-core = { path = "../core" }
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
