[package]
name = "object-names-auditor"
version = "0.1.0"
edition = "2021"
authors = ["Pushd Team"]
description = "Standalone auditor for object-names contract validation"
license = "MIT"

[dependencies]
anyhow = "1.0"
globset = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "object-names-auditor"
path = "src/main.rs"
