[package]
name = "git-proxy"
version = "0.1.0"
edition = "2021"
authors = ["Pushd Team"]
description = "Git proxy server component for intercepting and forwarding Git operations"
license = "MIT"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Git operations
git2 = "0.18"

# HTTP server
warp = "0.3"
hyper = { version = "0.14", features = ["full"] }

# Async runtime
futures = "0.3"
futures-util = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"

# File system
tempfile = "3.0"

# Network
reqwest = { version = "0.11", features = ["json"] }

# Configuration
toml = "0.8"

# Cryptographic hashing
sha2 = "0.10"

# Process execution
which = "5.0"

# Additional dependencies
regex = "1.0"
bytes = "1.0"

[dev-dependencies]
tokio-test = "0.4"
